--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_nav_bar: ^5.0.6
   kartal: ^3.3.0
   font_awesome_flutter: ^10.5.0
+  table_calendar: ^3.0.9
 
 dev_dependencies:
   flutter_test:
